--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,10 @@ services:
       dockerfile: Dockerfile
       context: .
     container_name: gophermart
+    environment:
+      RUN_ADDRESS: gophermart:8080
+      DATABASE_URI: postgres://gopher:G0ph3R@postgres:5432/gophermart
+      ACCRUAL_SYSTEM_ADDRESS: accrual:8080
     ports:
       - 8080:8080
     depends_on:
